--- a/recs5-backend/src/main/resources/application.properties
+++ b/recs5-backend/src/main/resources/application.properties
@@ -6,5 +6,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 server.error.include-message=always
+spring.main.allow-circular-references=true
 
 server.port=8080
